<resources>
    <string name="app_name">Get Bucketz!</string>
    <string name="two_pointer_made">2PM</string>
    <string name="two_pointer_atttempted">2PA</string>
    <string name="three_pointer_made">3PM</string>
    <string name="three_pointer_attempted">3PA</string>
    <string name="assist">AST</string>
    <string name="pass">PASS</string>
    <string name="offensive_rebound">OREB</string>
    <string name="defensive_rebound">DREB</string>
    <string name="block">BLK</string>
    <string name="steal">STL</string>
    <string name="free_throw_made">FTM</string>
    <string name="free_throw_attempted">FTA</string>
    <string name="turnover">TO</string>
    <string name="foul">FOUL</string>
    <string name="points">PTS</string>
    <string name="field_goals">FG</string>
    <string name="rebounds">REB</string>
    <string name="free_throws">FT</string>
    <string name="zero">0</string>
    <string name="zero_for_zero">0-0</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="newQuarter">NEXT</string>
    <string name="time">Time</string>
    <string name="title_activity_end_of_game_stats">EndOfGameStats</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="three_pointers">3PT</string>
    <string name="name">Name</string>
    <string name="minutes">MIN</string>
    <string name="add">Add</string>
    <string name="newgame">New Game</string>
    <string name="old_teams">Use Previous Names</string>
    <string name="undo">Undo</string>
    <string name="example_email">example@example.com</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="player_name">Player Name</string>
    <string name="finish_roster_creation">Finish</string>

    <string name="point_guard">Point Guard</string>
    <string name="shooting_guard">Shooting Guard</string>
    <string name="small_forward">Small Forward</string>
    <string name="power_forward">Power Forward</string>
    <string name="center">Center</string>


    <string name="login">Login</string>
    <string name="new_team">New Team?</string>

    <string name="my_games">My Games</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
