<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="christophershae.stats.EndOfGameStats$PlaceholderFragment">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/playerName"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/minutes"
                android:id="@+id/playersMinutesLabel"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/field_goals"
                android:id="@+id/playersFieldGoalsLabel"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/three_pointers"
                android:id="@+id/playersThreePointFieldGoalsLabel"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/free_throws"
                android:id="@+id/playersFreeThrowsLabel"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/offensive_rebound"
                android:id="@+id/playersOffensiveReboundsLabel"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/defensive_rebound"
                android:id="@+id/playersDefensiveReboundsLabel"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/rebounds"
                android:id="@+id/playersReboundsLabel"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/assist"
                android:id="@+id/playersAssistsLabel"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/steal"
                android:id="@+id/playersStealsLabel"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/block"
                android:id="@+id/playersBlocksLabel"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/turnover"
                android:id="@+id/playersTurnoversLabel"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/foul"
                android:id="@+id/playersFoulsLabel"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_weight="1" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/points"
                android:id="@+id/playersPointsLabel"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_weight="1" />

        </LinearLayout>


        <ListView
            android:id="@+id/listViewForStats"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </RelativeLayout>

</HorizontalScrollView>

