<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="16dp"
    android:background="@drawable/hardwood"
    tools:context="christophershae.stats.CreateRoster">

    <EditText
        android:id="@+id/enterPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/player_name" />

    <Button
        android:id="@+id/addPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="425dp"
        android:onClick="createPlayer"
        android:text="@string/add"
        android:layout_below="@+id/enterPlayerName"
        android:layout_alignStart="@+id/enterPlayerName"
        android:layout_marginStart="23dp" />

    <Button
        android:id="@+id/moveToStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterPlayerName"
        android:layout_toRightOf="@+id/addPlayer"
        android:onClick="changeToStats"
        android:text="@string/finish_roster_creation" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/moveToStats"
        android:layout_marginTop="20dp"
        android:paddingBottom="5dp" />

    <Button
        android:id="@+id/setQuarterTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setQuarterTime"
        android:layout_below="@+id/enterPlayerName"
        android:layout_toEndOf="@+id/enterPlayerName"
        android:text="@string/time" />

    <Button
        android:id="@+id/useOldRosterNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterPlayerName"
        android:layout_marginEnd="17dp"
        android:layout_toStartOf="@+id/addPlayer"
        android:onClick="generateNamesFromOldRoster"
        android:text="@string/old_teams" />
</RelativeLayout>


