<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hardwood"
    tools:context="christophershae.stats.LoginScreen">

    <EditText
        android:id="@+id/emailTextEntry"
        android:layout_width="511dp"
        android:layout_height="99dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="250dp"
        android:ems="10"

        android:hint="@string/example_email"
        android:inputType="textEmailAddress"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordTextEntry"
        android:layout_width="507dp"
        android:layout_height="81dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextEntry" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="511dp"
        android:layout_height="81dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="35dp"
        android:onClick="buttonClicked"
        android:text="@string/login"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextEntry" />

    <Button
        android:id="@+id/newUserButton"
        android:layout_width="507dp"
        android:layout_height="83dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="35dp"
        android:onClick="buttonClicked"
        android:text="@string/create_account"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Button
        android:id="@+id/recoverPassword"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="198dp"
        android:layout_height="48dp"
        android:layout_marginBottom="124dp"
        android:layout_marginEnd="284dp"
        android:layout_marginStart="284dp"
        android:layout_marginTop="4dp"
        android:onClick="forgotPassword"
        android:text="@string/forgot_password"
        android:textColor="@color/button_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUserButton"
        app:layout_constraintVertical_bias="0.076" />
</android.support.constraint.ConstraintLayout>
